main/zcode/parser/ZCodeParser.py
# Generated from main/zcode/parser/ZCode.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'elif'", "'else'", "'for'", "'until'", 
                     "'by'", "'break'", "'continue'", "'return'", "'begin'", 
                     "'end'", "'bool'", "'number'", "'string'", "'dynamic'", 
                     "'var'", "'func'", "'not'", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'...'", "'<-'", "<INVALID>", 
                     "','", "'['", "']'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "IFOP", "ELIFOP", "ELSEOP", "FOROP", 
                      "UNTILOP", "BYOP", "BREAKOP", "CONTOP", "RETURNOP", 
                      "BEGINOP", "ENDOP", "BOOL_TYPE", "NUMBER_TYPE", "STR_TYPE", 
                      "DYNTYPE", "VARTYPE", "FUNCTYPE", "NOTOP", "ANDOR", 
                      "ADDOP", "SUBTR", "MULOP", "DIVOP", "MODOP", "CONCAT", 
                      "ASSIGN", "RELATION", "CM", "LP", "RP", "LB", "RB", 
                      "NUMLIT", "NUM1", "NUM2", "NUM3", "NUM4", "BOOLIT", 
                      "STRINGLIT", "IDENTIFIER", "COMMENT", "WS", "NL", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_var_declare = 2
    RULE_normaldeclare = 3
    RULE_var_type = 4
    RULE_initialnormal = 5
    RULE_arraydeclare = 6
    RULE_array = 7
    RULE_dimension = 8
    RULE_dimtail = 9
    RULE_initialarray = 10
    RULE_arraylit = 11
    RULE_arraylittail = 12
    RULE_literals = 13
    RULE_vartypedeclare = 14
    RULE_func_declare = 15
    RULE_param_here = 16
    RULE_param_list = 17
    RULE_paratail = 18
    RULE_para = 19
    RULE_bodyhere = 20
    RULE_body = 21
    RULE_statement = 22
    RULE_assignment = 23
    RULE_lhs = 24
    RULE_arrayindex = 25
    RULE_arr_expr = 26
    RULE_cell = 27
    RULE_exprtail = 28
    RULE_ifstm = 29
    RULE_elif_here = 30
    RULE_else_here = 31
    RULE_elifbranch = 32
    RULE_eliftail = 33
    RULE_elsebranch = 34
    RULE_forstm = 35
    RULE_cond_expr = 36
    RULE_update_expr = 37
    RULE_break_stm = 38
    RULE_continue_stm = 39
    RULE_return_stm = 40
    RULE_func_call_stm = 41
    RULE_argumentlist = 42
    RULE_arguments = 43
    RULE_argtail = 44
    RULE_block = 45
    RULE_expr = 46
    RULE_expr1 = 47
    RULE_expr2 = 48
    RULE_expr3 = 49
    RULE_expr4 = 50
    RULE_expr5 = 51
    RULE_expr6 = 52
    RULE_expr7 = 53
    RULE_func_call_expr = 54
    RULE_operand = 55

    ruleNames =  [ "program", "declaration", "var_declare", "normaldeclare", 
                   "var_type", "initialnormal", "arraydeclare", "array", 
                   "dimension", "dimtail", "initialarray", "arraylit", "arraylittail", 
                   "literals", "vartypedeclare", "func_declare", "param_here", 
                   "param_list", "paratail", "para", "bodyhere", "body", 
                   "statement", "assignment", "lhs", "arrayindex", "arr_expr", 
                   "cell", "exprtail", "ifstm", "elif_here", "else_here", 
                   "elifbranch", "eliftail", "elsebranch", "forstm", "cond_expr", 
                   "update_expr", "break_stm", "continue_stm", "return_stm", 
                   "func_call_stm", "argumentlist", "arguments", "argtail", 
                   "block", "expr", "expr1", "expr2", "expr3", "expr4", 
                   "expr5", "expr6", "expr7", "func_call_expr", "operand" ]

    EOF = Token.EOF
    IFOP=1
    ELIFOP=2
    ELSEOP=3
    FOROP=4
    UNTILOP=5
    BYOP=6
    BREAKOP=7
    CONTOP=8
    RETURNOP=9
    BEGINOP=10
    ENDOP=11
    BOOL_TYPE=12
    NUMBER_TYPE=13
    STR_TYPE=14
    DYNTYPE=15
    VARTYPE=16
    FUNCTYPE=17
    NOTOP=18
    ANDOR=19
    ADDOP=20
    SUBTR=21
    MULOP=22
    DIVOP=23
    MODOP=24
    CONCAT=25
    ASSIGN=26
    RELATION=27
    CM=28
    LP=29
    RP=30
    LB=31
    RB=32
    NUMLIT=33
    NUM1=34
    NUM2=35
    NUM3=36
    NUM4=37
    BOOLIT=38
    STRINGLIT=39
    IDENTIFIER=40
    COMMENT=41
    WS=42
    NL=43
    ERROR_CHAR=44
    UNCLOSE_STRING=45
    ILLEGAL_ESCAPE=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(ZCodeParser.NL)
            else:
                return self.getToken(ZCodeParser.NL, i)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZCodeParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(ZCodeParser.DeclarationContext,i)


        def getRuleIndex(self):
            return ZCodeParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ZCodeParser.NL:
                self.state = 112
                self.match(ZCodeParser.NL)
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 119 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 118
                self.declaration()
                self.state = 121 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZCodeParser.BOOL_TYPE) | (1 << ZCodeParser.NUMBER_TYPE) | (1 << ZCodeParser.STR_TYPE) | (1 << ZCodeParser.DYNTYPE) | (1 << ZCodeParser.VARTYPE) | (1 << ZCodeParser.FUNCTYPE))) != 0)):
                    break

            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ZCodeParser.NL:
                self.state = 123
                self.match(ZCodeParser.NL)
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 129
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self):
            return self.getTypedRuleContext(ZCodeParser.Var_declareContext,0)


        def func_declare(self):
            return self.getTypedRuleContext(ZCodeParser.Func_declareContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(ZCodeParser.NL)
            else:
                return self.getToken(ZCodeParser.NL, i)

        def getRuleIndex(self):
            return ZCodeParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = ZCodeParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.BOOL_TYPE, ZCodeParser.NUMBER_TYPE, ZCodeParser.STR_TYPE, ZCodeParser.DYNTYPE, ZCodeParser.VARTYPE]:
                self.state = 131
                self.var_declare()
                pass
            elif token in [ZCodeParser.FUNCTYPE]:
                self.state = 132
                self.func_declare()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 136 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 135
                    self.match(ZCodeParser.NL)

                else:
                    raise NoViableAltException(self)
                self.state = 138 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def normaldeclare(self):
            return self.getTypedRuleContext(ZCodeParser.NormaldeclareContext,0)


        def arraydeclare(self):
            return self.getTypedRuleContext(ZCodeParser.ArraydeclareContext,0)


        def vartypedeclare(self):
            return self.getTypedRuleContext(ZCodeParser.VartypedeclareContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_var_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declare" ):
                return visitor.visitVar_declare(self)
            else:
                return visitor.visitChildren(self)




    def var_declare(self):

        localctx = ZCodeParser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_declare)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.normaldeclare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.arraydeclare()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 142
                self.vartypedeclare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NormaldeclareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def initialnormal(self):
            return self.getTypedRuleContext(ZCodeParser.InitialnormalContext,0)


        def var_type(self):
            return self.getTypedRuleContext(ZCodeParser.Var_typeContext,0)


        def DYNTYPE(self):
            return self.getToken(ZCodeParser.DYNTYPE, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_normaldeclare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNormaldeclare" ):
                return visitor.visitNormaldeclare(self)
            else:
                return visitor.visitChildren(self)




    def normaldeclare(self):

        localctx = ZCodeParser.NormaldeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_normaldeclare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.BOOL_TYPE, ZCodeParser.NUMBER_TYPE, ZCodeParser.STR_TYPE]:
                self.state = 145
                self.var_type()
                pass
            elif token in [ZCodeParser.DYNTYPE]:
                self.state = 146
                self.match(ZCodeParser.DYNTYPE)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 149
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 150
            self.initialnormal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER_TYPE(self):
            return self.getToken(ZCodeParser.NUMBER_TYPE, 0)

        def BOOL_TYPE(self):
            return self.getToken(ZCodeParser.BOOL_TYPE, 0)

        def STR_TYPE(self):
            return self.getToken(ZCodeParser.STR_TYPE, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_var_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_type" ):
                return visitor.visitVar_type(self)
            else:
                return visitor.visitChildren(self)




    def var_type(self):

        localctx = ZCodeParser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZCodeParser.BOOL_TYPE) | (1 << ZCodeParser.NUMBER_TYPE) | (1 << ZCodeParser.STR_TYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitialnormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(ZCodeParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(ZCodeParser.ExprContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_initialnormal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitialnormal" ):
                return visitor.visitInitialnormal(self)
            else:
                return visitor.visitChildren(self)




    def initialnormal(self):

        localctx = ZCodeParser.InitialnormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_initialnormal)
        try:
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.ASSIGN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.match(ZCodeParser.ASSIGN)
                self.state = 155
                self.expr(0)
                pass
            elif token in [ZCodeParser.NL]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraydeclareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(ZCodeParser.Var_typeContext,0)


        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def array(self):
            return self.getTypedRuleContext(ZCodeParser.ArrayContext,0)


        def initialarray(self):
            return self.getTypedRuleContext(ZCodeParser.InitialarrayContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_arraydeclare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraydeclare" ):
                return visitor.visitArraydeclare(self)
            else:
                return visitor.visitChildren(self)




    def arraydeclare(self):

        localctx = ZCodeParser.ArraydeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arraydeclare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.var_type()
            self.state = 160
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 161
            self.array()
            self.state = 162
            self.initialarray()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(ZCodeParser.LP, 0)

        def dimension(self):
            return self.getTypedRuleContext(ZCodeParser.DimensionContext,0)


        def RP(self):
            return self.getToken(ZCodeParser.RP, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = ZCodeParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(ZCodeParser.LP)
            self.state = 165
            self.dimension()
            self.state = 166
            self.match(ZCodeParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMLIT(self):
            return self.getToken(ZCodeParser.NUMLIT, 0)

        def dimtail(self):
            return self.getTypedRuleContext(ZCodeParser.DimtailContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_dimension

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimension" ):
                return visitor.visitDimension(self)
            else:
                return visitor.visitChildren(self)




    def dimension(self):

        localctx = ZCodeParser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_dimension)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(ZCodeParser.NUMLIT)
            self.state = 169
            self.dimtail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimtailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(ZCodeParser.CM, 0)

        def NUMLIT(self):
            return self.getToken(ZCodeParser.NUMLIT, 0)

        def dimtail(self):
            return self.getTypedRuleContext(ZCodeParser.DimtailContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_dimtail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimtail" ):
                return visitor.visitDimtail(self)
            else:
                return visitor.visitChildren(self)




    def dimtail(self):

        localctx = ZCodeParser.DimtailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_dimtail)
        try:
            self.state = 175
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.match(ZCodeParser.CM)
                self.state = 172
                self.match(ZCodeParser.NUMLIT)
                self.state = 173
                self.dimtail()
                pass
            elif token in [ZCodeParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitialarrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(ZCodeParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(ZCodeParser.ExprContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_initialarray

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitialarray" ):
                return visitor.visitInitialarray(self)
            else:
                return visitor.visitChildren(self)




    def initialarray(self):

        localctx = ZCodeParser.InitialarrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_initialarray)
        try:
            self.state = 180
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.ASSIGN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.match(ZCodeParser.ASSIGN)
                self.state = 178
                self.expr(0)
                pass
            elif token in [ZCodeParser.NL]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraylitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(ZCodeParser.LP, 0)

        def literals(self):
            return self.getTypedRuleContext(ZCodeParser.LiteralsContext,0)


        def arraylittail(self):
            return self.getTypedRuleContext(ZCodeParser.ArraylittailContext,0)


        def RP(self):
            return self.getToken(ZCodeParser.RP, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_arraylit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraylit" ):
                return visitor.visitArraylit(self)
            else:
                return visitor.visitChildren(self)




    def arraylit(self):

        localctx = ZCodeParser.ArraylitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arraylit)
        try:
            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 182
                self.match(ZCodeParser.LP)
                self.state = 183
                self.literals()
                self.state = 184
                self.arraylittail()
                self.state = 185
                self.match(ZCodeParser.RP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 187
                self.match(ZCodeParser.LP)
                self.state = 188
                self.match(ZCodeParser.RP)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraylittailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(ZCodeParser.CM, 0)

        def literals(self):
            return self.getTypedRuleContext(ZCodeParser.LiteralsContext,0)


        def arraylittail(self):
            return self.getTypedRuleContext(ZCodeParser.ArraylittailContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_arraylittail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraylittail" ):
                return visitor.visitArraylittail(self)
            else:
                return visitor.visitChildren(self)




    def arraylittail(self):

        localctx = ZCodeParser.ArraylittailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_arraylittail)
        try:
            self.state = 196
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 191
                self.match(ZCodeParser.CM)
                self.state = 192
                self.literals()
                self.state = 193
                self.arraylittail()
                pass
            elif token in [ZCodeParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arraylit(self):
            return self.getTypedRuleContext(ZCodeParser.ArraylitContext,0)


        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def NUMLIT(self):
            return self.getToken(ZCodeParser.NUMLIT, 0)

        def SUBTR(self):
            return self.getToken(ZCodeParser.SUBTR, 0)

        def STRINGLIT(self):
            return self.getToken(ZCodeParser.STRINGLIT, 0)

        def BOOLIT(self):
            return self.getToken(ZCodeParser.BOOLIT, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_literals

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiterals" ):
                return visitor.visitLiterals(self)
            else:
                return visitor.visitChildren(self)




    def literals(self):
